[gd_scene load_steps=2 format=3 uid="uid://dh026oj3ubdn7"]

[ext_resource type="Script" path="res://scenes/menu/level_select.gd" id="1_8k6ay"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8k6ay")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Spacer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -130.0
offset_right = 230.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Spacer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Level1" type="Button" parent="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Level 1"

[node name="Level2" type="Button" parent="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Level 2"

[node name="Level3" type="Button" parent="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Level 3"

[node name="Level4" type="Button" parent="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Boss"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Spacer/PanelContainer/MarginContainer/GridContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
